# networked-vr

./: player-template.txt  unityProject.vrmanifest
Assets/Avatars/: Cyrus (2-17-20).blend  Kumail-2-17-20.blend  Phillip (2-17-20).blend
Assets/Editor/: PlayerInitTransformEditor.cs  SavePlayModeEditor.cs
Assets/LipMotion/Plugin/: CMakeLists.txt  LipMotion.cpp  README  test_LipMotion.cpp
Assets/Materials/: Black Rubber.mat  Blinds.mat  Custom Sky.mat  Fan Light Bulb Off.mat  Fan Light Bulb On.mat  Fan Shell Glass Off.mat  Fan Shell Glass On.mat  Glass Cup.mat  Laser Pointer.mat  Monitor.mat  Satellite Rotated.mat  Satellite View.mat  Skin.mat  VertexSkin.mat  Window Frame.mat  Window Night.mat
Assets/Models/: Acer Monitor.blend  Adjustable Stand.blend  Brita.blend  Glass Cup 1.blend  Office Chairs.blend  Office Desk - Small.blend  Office Desk.blend  Phillip Office Desk.blend  Phillip Tablet Stand.blend  San Bruno - Terrain.asset  Tablet.blend  Tripod.blend  cyrus keyboard left.blend  cyrus keyboard right.blend  keyboard.blend  kumail keyboard.blend  mouse.blend  room.blend  room.fbx  water-bottle-nalgene.blend  water-bottle-swell.blend
Assets/R&D/: Human Mesh.blend
Assets/Resources/: Custom VR Player.prefab  Drawer Prefab.prefab  Full IK Player Cyrus.prefab  Full IK Player Kumail.prefab  Full IK Player Phillip.prefab  Mirror.renderTexture
Assets/Scenes/: .New Scene.unity.swp  .Normal Multiplayer Test.unity.swp  Avatar Dev.unity  Leap Motion Test.unity  Normal Multiplayer Test.unity  OfficeScene.unity
ProjectSettings/: ProjectSettings.asset  TagManager.asset
(+72 files in other folders)
